fix: truncate filename (#773)
* fix: truncate filename

* add padding in octotree-patch

--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -275,17 +275,9 @@
       }
 
       .octotree-patch {
-        display: none;
-      }
-
-      .octotree-patch-name {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      .octotree-patch:last-of-type {
         display: inline-flex;
         flex-grow: 1;
+        margin-right: 5px;
 
         font-size: 80%;
         span {
